feature/github-user-search-4 - final mvp

--- a/src/main/profile/index.module.scss
+++ b/src/main/profile/index.module.scss
@@ -1,6 +1,6 @@
 .profileLayout {
   height: auto;
-  width: 40%;
+  width: 45%;
   background-color: #314272;
   border-radius: 10px;
   padding: 40px;
@@ -15,9 +15,9 @@
 }
 
 .icon {
-  background-color: red;
-  width: 6em;
-  height: 6em;
+  width: 115px;
+  height: 115px;
+  background-size: 115px;
   border-radius: 50%;
 }
 
