--- a/src/main/components/search/index.module.scss
+++ b/src/main/components/search/index.module.scss
@@ -1,12 +1,31 @@
+:global {
+  body[data-theme='light'] {
+    --search-bg: var(--palette-color-1);
+    --search-color: var(--palette-color-5);
+    --search-placeholder-color: var(--palette-color-3);
+    --search-shadow: var(--shadow);
+    --search-clear-content:url("clear-black.svg");
+  }
+
+  body[data-theme='dark'] {
+    --search-bg: var(--palette-color-6);
+    --search-color: var(--palette-color-1);
+    --search-placeholder-color: var(--palette-color-2);
+    --search-shadow: unset;
+    --search-clear-content: url("clear-white.svg");
+  }
+}
+
 .searchLayout {
   height: 70px;
-  width: 45%;
-  background-color: #314272;
+  width: 40%;
   border-radius: 10px;
   display: flex;
   align-items: center;
   justify-content: space-around;
   margin-bottom: 20px;
+  background-color: var(--search-bg);
+  box-shadow: var(--search-shadow);
 }
 
 .icon {
@@ -21,13 +40,13 @@
   font-family: 'Ubuntu Mono', monospace;
   height: 45px;
   width: 70%;
-  color: #ffffff;
+  color: var(--search-color);
   font-size: 18px;
   background-color: transparent;
   border: 0;
   outline: none;
   &::placeholder {
-    color: #ffffff;
+    color: var(--search-placeholder-color);
   }
 
   &::-webkit-search-cancel-button {
@@ -35,8 +54,7 @@
     cursor: pointer;
     height: 20px;
     width: 20px;
-    content: url("./clear.svg");
-    color: #ffffff;
+    content: var(--search-clear-content);
   }
 }
 
