feature/devfinder-8 - mobile adaptive

--- a/src/main/components/profile/github-link/index.module.scss
+++ b/src/main/components/profile/github-link/index.module.scss
@@ -11,6 +11,11 @@
 .row {
   width: 100%;
   margin-bottom: 20px;
+
+  @media (max-width: 768px) {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .placeholder {
