--- a/src/main/components/header/index.module.scss
+++ b/src/main/components/header/index.module.scss
@@ -16,6 +16,10 @@
   justify-content: space-between;
   align-items: center;
   padding: 50px 0;
+
+  @media (max-width: 768px) {
+    width: 90%;
+  }
 }
 
 .logo {
