--- a/src/main/components/profile/contacts/cell/index.module.scss
+++ b/src/main/components/profile/contacts/cell/index.module.scss
@@ -19,6 +19,14 @@
   &:first-child {
     margin-bottom: 30px;
   }
+
+  @media (max-width: 768px) {
+    width: 100%;
+    margin-bottom: 30px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 }
 
 .contact {
