--- a/src/main/components/profile/title/index.module.scss
+++ b/src/main/components/profile/title/index.module.scss
@@ -16,11 +16,19 @@
   align-items: center;
   width: 100%;
   margin-bottom: 20px;
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+  }
 }
 
 .name {
   font-size: 24px;
   color: var(--profile-title-name);
+
+  @media (max-width: 768px) {
+    margin-bottom: 20px;
+  }
 }
 
 .created {
