--- a/src/main/index.module.scss
+++ b/src/main/index.module.scss
@@ -10,8 +10,24 @@
   background-color: var(--palette-color-7);
 }
 
+:global(#root) {
+  height: 100%;
+}
+
 .app {
   display: flex;
+  align-items: center;
+  flex-direction: column;
+  height: 100%;
+}
+
+.content {
   flex-direction: column;
   align-items: center;
+  width: 40%;
+  flex: 1 0 auto;
+
+  @media (max-width: 768px) {
+    width: 90%;
+  }
 }
